@@ -1,14 +1,11 @@
 package ru.Ivan.OOP4.Transports;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class Car extends Transport{
     public Car() {
-        setVelocity(20);
-        setMax_fuel(500);
-        setFuel(this.max_fuel);
-        setFuel_per_second(7.5f);
-        this.allowedTerrains = Arrays.asList(TerrainType.PLAIN);
+        super(20, 500, 7.5f, List.of(TerrainType.PLAIN));
     }
 
     @Override
